Update Main Screen: * Add gateway visual selection * Add hover messages on header * Add bouncing drop list (issue: visibility) * Add create bouncing section * Update boucing icon image

--- a/Main/main.scss
+++ b/Main/main.scss
@@ -1,5 +1,13 @@
 @import "../variables.scss";
 
+loading-screen {
+    background: black;
+    width: 100%;
+    height: 100%;
+    display: inherit;
+    visibility: visible;
+}
+
 .main-screen {
     height: 100vh;
     background-image: url('../public/images/background.png');
@@ -47,6 +55,61 @@
     justify-content: center;
     align-items: center;
     align-content: space-between;
+}
+
+.gateway-section {
+    width: 6rem;
+    height: 6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0.472), 0 0px 30px 5px rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0.1);
+    p { 
+        opacity: 0.8;
+        font-weight: bold;
+        text-shadow: 1px 2px black;
+        margin: 0; 
+        padding: 0;
+        color: orange;
+        text-align: center;
+        opacity: 1;
+        &:hover {
+            opacity: 1;
+            cursor: pointer;
+        }
+    }
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.server-section {
+    width: 6rem;
+    height: 6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0.472), 0 0px 0px 0px rgba(255,255,255,0.5);
+    background-color: rgba(255, 255, 255, 0);
+    p { 
+        opacity: 0.8;
+        font-weight: bold;
+        text-shadow: 1px 2px black;
+        margin: 0; 
+        padding: 0;
+        color: white;
+        text-align: center;
+        &:hover {
+            opacity: 1;
+            cursor: pointer;
+        }
+    }
+    &:hover {
+        cursor: pointer;
+    }
 }
 
 .right-panel-section {
@@ -726,12 +789,13 @@
 
 .header-gateway {
     background: url('../public/images/header/header-center/pc-icon.png');
-    opacity: 0.7;
     background-repeat: no-repeat;
+    opacity: 0.7;
     background-size: 100%;
     width: 4rem;
     height: 4rem;
     &:hover {
+        opacity: 1;
         cursor: pointer;
     }
 }
@@ -743,15 +807,140 @@
     background-size: 100%;
     width: 13rem;
     height: 1.3rem;
+
 }
 
 .header-bouncing {
-    background: url('../public/images/header/header-center/pc-icon.png');
-    opacity: 0.7;
+    background: url('../public/images/header/header-center/bouncing-icon.png');
+    opacity: 0.5;
     background-repeat: no-repeat;
     background-size: 100%;
-    width: 3rem;
-    height: 3rem;
+    width: 2.5rem;
+    height: 2.5rem;
+}
+
+.bouncing-hover {
+    width: 6rem;
+    height: 1rem;
+    top: -150px;
+    left: 47%;
+    background-color: rgba(83, 82, 82, 0.553);
+    position: relative;
+    visibility: hidden;
+    z-index: 1;
+    border: 4px solid rgba(128, 128, 128, 0.253);
+    box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.32), 0px 0px 0px 0px rgba(255,255,255,0.5);
+    p { 
+        padding: 0;
+        text-shadow: 1px 0px rgba(0, 0, 0, 0.795);
+        font-size: 9.5pt;
+        font-weight: bold;
+        text-align: center;
+        margin: 0; 
+        text-align: center;
+        // background-color: rgb(214, 212, 212);
+        color: rgb(255, 147, 45);
+        &:hover {
+            color: white;
+        }
+    }
+    &:hover {
+        // visibility: visible;
+        cursor: pointer;
+    }
+}
+
+.server-ip-hover {
+    width: 6rem;
+    height: 1rem;
+    top: -60px;
+    left: 48%;
+    background-color: rgba(83, 82, 82, 0.553);
+    position: relative;
+    visibility: hidden;
+    z-index: 1;
+    border: 4px solid rgba(128, 128, 128, 0.253);
+    box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.32), 0px 0px 0px 0px rgba(255,255,255,0.5);
+    p { 
+        padding: 0;
+        text-shadow: 1px 0px rgba(0, 0, 0, 0.795);
+        font-size: 9.5pt;
+        font-weight: bold;
+        text-align: center;
+        margin: 0; 
+        text-align: center;
+        color: rgba(255, 255, 255, 0.733);
+    }
+}
+
+.gateway-ip-hover {
+    width: 6rem;
+    height: 1rem;
+    top: -60px;
+    left: -24%;
+    background-color: rgba(83, 82, 82, 0.553);
+    position: relative;
+    visibility: hidden;
+    z-index: 1;
+    border: 4px solid rgba(128, 128, 128, 0.253);
+    box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.32), 0px 0px 0px 0px rgba(255,255,255,0.5);
+    p { 
+        padding: 0;
+        text-shadow: 1px 0px rgba(0, 0, 0, 0.795);
+        font-size: 9.5pt;
+        font-weight: bold;
+        text-align: center;
+        margin: 0; 
+        text-align: center;
+        color: rgba(255, 255, 255, 0.733);
+    }
+}
+
+.bouncing-create-section {
+    width: 6rem;
+    height: 6rem;
+    top: -60px;
+    left: -24%;
+    background-color: rgba(83, 82, 82, 0.553);
+    position: relative;
+    visibility: hidden;
+}
+
+.bouncing-dropdown-list {
+    background-color: $bg-default-0-4;
+    position: relative;
+    bottom: 680px;
+    left: 46%;
+    width: 9rem;
+    height: 5rem;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    color: rgb(158, 158, 158);
+    box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.32), 0px 0px 0px 0px rgba(255,255,255,0.5);
+}
+
+.bouncing-dropdown-list__item {
+    background-color: rgba(48, 48, 48, 0.781);
+    width: 95%;
+    margin: 0.1rem;
+    p {
+        font-weight: bold;
+        text-shadow: 1px 0px rgba(0, 0, 0, 0.795);
+        font-size: 9.5pt;
+        margin: 0;
+        text-align: center;
+    }
+    &:hover {
+        background-color: rgba(71, 71, 71, 0.578);
+        cursor: pointer;
+        p {
+            color: orange;
+        }
+    }
 }
 
 .header-connection-right {
@@ -782,7 +971,8 @@
 .header-connection-right:hover,
 .header-server:hover,
 .header-gateway:hover {
-    opacity: 1;
+    opacity: 0.7;
+    cursor: pointer;
 }
 
 #left-panel-clock {
